# books-api

./: Cargo.toml  Dockerfile  LICENSE  appspec.yaml  buildspec.yml  taskdef.json
copilot/: .workspace  buildspec.yml  pipeline.yml
copilot/books-api/: manifest.yml
src/: filters.rs  handlers.rs  main.rs  models.rs  tests.rs
