[package]
name = "books-api"
version = "0.1.0"
authors = ["Ritesh Sinha <ritsinha@amazon.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "^0.3"
log = "0.4"
pretty_env_logger = "0.4"